Build the JAR file